--- a/research-proposal/ref.bib
+++ b/research-proposal/ref.bib
@@ -241,3 +241,16 @@ keywords = {mobile communications, wireless networks, telecommunications
 infrastructures, developing countries, global internet connectivity, socio-economic 
 factors, mobile technology} 
 }
+
+@article{DBLP:journals/corr/abs-2007-14390,
+  author    = {Daniel J. Beutel and
+               Taner Topal and
+               Akhil Mathur and
+               Xinchi Qiu and
+               Titouan Parcollet and
+               Nicholas D. Lane},
+  title     = {Flower: {A} Friendly Federated Learning Research Framework},
+  journal   = {CoRR},
+  volume    = {abs/2007.14390},
+  year      = {2020}
+}
