--- a/research-proposal/work_division.tex
+++ b/research-proposal/work_division.tex
@@ -21,3 +21,6 @@
         {\bf Timeline and Work Division}
     }
 \end{table}
+
+\section{Resources}
+    \textbf{https://github.com/taham0/topics-research-project}
