--- a/research-proposal/methods.tex
+++ b/research-proposal/methods.tex
@@ -9,13 +9,13 @@
 
     \subsection{Phase I}
     We will begin by developing an android application.
-    Simultaneously, we will develop an end-to-end prototype of the FL platform for 4 devices.
-    Once a working prototype is in place, the next step will be to scale it to 20 users and perform thorough end-to-end testing.
+    Simultaneously, we will develop an end-to-end prototype of the FL platform for 4 devices using the phones at our disposal.
+    Once a working prototype is in place, the next step will be to scale it to 20 users and perform thorough end-to-end testing. We will extend the user base to friends and family so that we can receive quick feedback, resolve issues, and improve the application before further scaling.
     The primary objective is to ensure efficient, seamless deployment of the FL platform on a sufficiently large number of clients.
     \subsection{Phase II}
     Once this is achieved, we will integrate our android application with the FL platform.
     \subsection{Phase III}
-    Finally, we will make an effort to scale our application to 100+ users.
+    Finally, we will make an effort to scale our application to 100+ users. We will focus on promotion through college events like Startup Weekend where people from all over the country arrive to observe new and innovative ideas that emerge from within the student body.
 
     \begin{table}[t]
         
