--- a/research-proposal/design.tex
+++ b/research-proposal/design.tex
@@ -10,8 +10,7 @@
     %     \end{enumerate}
 
         \textbf{Personalized Chatbot}
-        Our application in target will be a specific University dedicated chatbot which handles a user's questions related to Graduate and Undergraduate level applications and academic assistance. Essentially our user will interact with our chatbot over a mobile application, where question will be provided as input. The question will be given as an input to our Deep Neural Network model on the user's device which will then produce an output as answer.~\cite{9225395} We will require user to provides us with the feedback for the query related answer, to improve the model. Our application will perform some pre-processing and then cache each question and answer pair with the feedback given, to later allow for the model to be trained on the device.\newline
-
+        Our application in target will be a specific University dedicated chatbot which handles a user's questions related to Graduate and Undergraduate level applications and academic assistance. Essentially our user will interact with our chatbot over a mobile application, where question will be provided as input. The question will be given as an input to our Deep Neural Network model on the user's device which will then produce an output as answer.~\cite{9225395} We will require user to provides us with the feedback for the query related answer, to improve the model. Our application will perform some pre-processing and then cache each question and answer pair with the feedback given, to later allow for the model to be trained on the device.\newline \newline
         \textbf{Prompt Recommendation System}
         The purpose of this application is to improve the user's search experience. It utilizes 
         APIs from leading search engines such as Google or Microsoft Edge to track the user's 
@@ -19,8 +18,7 @@
         search result or not by analyzing their re-attempts with modified queries, which will be 
         provided by the API integrated into the application. The model will continually learn from 
         the user's search patterns and provide the most relevant prompts based on the main 
-        category of their query. \newline
-
+        category of their query. \newline \newline
         \textbf{Challenges}
         The target audience for our applications consists primarily of low-end smartphone 
         users, who are likely to have limited access to an unmetered network.~\cite{10.1504/IJMC.2005.006583} The training 
