--- a/mid-term-report/work_division.tex
+++ b/mid-term-report/work_division.tex
@@ -1,2 +1,26 @@
-\section{Timeline and Work Division}
-    Timeline and division of work.
+\begin{table}
+    \footnotesize
+    \centering
+    \begin{tabular}{lccc}
+        \textbf{Assignment} & \textbf{Deadline}  & \textbf{Members Responsible}\\
+        
+        Literature Review                       & Feb 17          & All                     \\
+        Platform Evaluation                     & Feb 20          & Taha, Maaz            \\
+        FL Deployment (4 Devices)      & Feb 26          & Hamza, Taha             \\
+        FL Deployment (20 Devices)     & Mar 15          & Taha, Hamza             \\
+        Mid Report                              & Mar 30          & All                     \\
+        Application Prototype                   & April 1         & All, Shazer (Lead)            \\
+        App Integration                             & April 5         & Shazer, Taha        \\
+        Testing                                 & April 5         & Maaz, Hamza         \\
+        User-base Development                   & April 15        & All                 \\
+        Baseline Evaluation                     & April 22        & Hamza, Maaz, Taha   \\
+        Final Report                            & April 27        & All \\
+    \end{tabular}
+
+    \caption{
+        {\bf Timeline and Work Division}
+    }
+\end{table}
+
+\section{Resources}
+    \textbf{https://github.com/taham0/topics-research-project}
