--- a/mid-term-report/paper.tex
+++ b/mid-term-report/paper.tex
@@ -22,9 +22,9 @@
 
 \input{intro}
 \input{approach}
-% \input{design}
-% \input{methods}
-% \input{work_division}
+\input{design}
+\input{methods}
+\input{work_division}
 \newpage
 
 \bibliographystyle{acm}
